--- a/vignettes/MSstatsBioNet.Rmd
+++ b/vignettes/MSstatsBioNet.Rmd
@@ -26,22 +26,76 @@ statistical analysis results in the context of protein-protein interaction
 networks. The package is designed to be used in conjunction with the 
 `MSstats` package.
 
+# MSstats Convert from Upstream Dataset
+
+```{r}
+library(MSstatsConvert)
+input = system.file("tinytest/raw_data/Metamorpheus/AllQuantifiedPeaks.tsv", 
+                                package = "MSstatsConvert")
+input = data.table::fread(input)
+annot = system.file("tinytest/raw_data/Metamorpheus/Annotation.tsv", 
+                                package = "MSstatsConvert")
+annot = data.table::fread(annot)
+msstats_imported = MetamorpheusToMSstatsFormat(input, annotation = annot)
+head(msstats_imported)
+```
+
+# MSstats Process and GroupComparison
+
+```{r}
+library(MSstatsConvert)
+QuantData = dataProcess(msstats_imported, use_log_file = FALSE)
+groupComparisonResult = groupComparison(contrast.matrix="pairwise", 
+                                        data=QuantData, 
+                                        use_log_file = FALSE)
+```
+
+# MSstatsBioNet Analysis
+
+## ID Conversion
+
+First, we need to convert the group comparison results to a format that can be
+processed by INDRA.  The `getSubnetworkFromIndra` function requires a table 
+containing HGNC IDs.  We can use the following mapping to convert from Uniprot
+to HGNC ID.  This mapping was obtained from this 
+[Python uniprot client](https://indra.readthedocs.io/en/docstrings/modules/databases/index.html#indra.databases.hgnc_client.get_hgnc_id)
+
+```{r}
+uniprot_to_hgnc_mapping = c(
+    "B9A064" = "38476",
+    "O00391" = "9756",
+    "O14818" = "9536",
+    "O43598" = "21218",
+    "O43707" = "166",
+    "P16050" = "11390",
+    "P84243" = "4765"
+)
+groupComparisonResult$ComparisonResult$HgncId = uniprot_to_hgnc_mapping[
+    groupComparisonResult$ComparisonResult$Protein
+]
+```
+
+## Subnetwork Query
+
 The package provides a function `getSubnetworkFromIndra` that retrieves a
 subnetwork of proteins from the INDRA database based on differential abundance
 analysis results.  The function `visualizeNetworks` then takes the output
 of `getSubnetworkFromIndra` and visualizes the subnetwork.
 
 ```{r proteinNetworkDiscovery, eval=FALSE}
-input <- data.table::fread(
-    system.file("processed_data/groupComparisonModel.csv",
-        package = "MSstatsBioNet"
-    )
-)
-subnetwork <- getSubnetworkFromIndra(input)
+
+subnetwork = getSubnetworkFromIndra(groupComparisonResult$ComparisonResult)
+```
+This package is distributed under the [Artistic-2.0](https://opensource.org/licenses/Artistic-2.0) license.  However, its dependencies may have different licenses.  In this example, getSubnetworkFromIndra depends on INDRA, which is distributed under the [BSD 2-Clause](https://opensource.org/license/bsd-2-clause) license.  Furthermore, INDRA's knowledge sources may have different licenses for commercial applications.  Please refer to the [INDRA README](https://github.com/sorgerlab/indra?tab=readme-ov-file#indra-modules) for more information on its knowledge sources and their associated licenses.
+
+
+## Visualize Networks
+
+```{r proteinNetworkDiscovery, eval=FALSE}
 visualizeNetworks(subnetwork$nodes, subnetwork$edges)
 ```
 
-This package is distributed under the [Artistic-2.0](https://opensource.org/licenses/Artistic-2.0) license.  However, its dependencies may have different licenses.  In this example, getSubnetworkFromIndra depends on INDRA, which is distributed under the [BSD 2-Clause](https://opensource.org/license/bsd-2-clause) license.  Furthermore, INDRA's knowledge sources may have different licenses for commercial applications.  Please refer to the [INDRA README](https://github.com/sorgerlab/indra?tab=readme-ov-file#indra-modules) for more information on its knowledge sources and their associated licenses.
+
 
 # Session info
 
