--- a/vignettes/MSstatsBioNet.Rmd
+++ b/vignettes/MSstatsBioNet.Rmd
@@ -19,11 +19,13 @@ knitr::opts_chunk$set(
 
 # Installation
 
+Run this code below to install MSstatsBioNet from bioconductor
+
 ```{r eval = FALSE}
 if (!require("BiocManager", quietly = TRUE))
     install.packages("BiocManager")
 
-BiocManager::install("MSstatsConvert")
+BiocManager::install("MSstatsBioNet")
 ```
 
 # Purpose of MSstatsBioNet
@@ -53,6 +55,13 @@ msstats_imported <- MetamorpheusToMSstatsFormat(input,
 head(msstats_imported)
 ```
 
+We will first convert the input data to a format that can be processed by 
+MSstats.  In this example, the `MetamorpheusToMSstatsFormat` function is used 
+to convert the input data from Metamorpheus to MSstats format.  The MSstats
+format will contain the necessary information for downstream analysis, such
+as peptide information, abundance values, run ID, and experimental annotation
+information.
+
 # MSstats Process and GroupComparison
 
 ```{r}
@@ -64,6 +73,11 @@ groupComparisonResult <- groupComparison(
     use_log_file = FALSE
 )
 ```
+
+Next, we will preprocess the data using the `dataProcess` function and perform
+a statistical analysis using the `groupComparison` function.  The output of 
+`groupComparison` is a table containing a list of differentially abundant 
+proteins with their associated p-values and log fold changes.  
 
 # MSstatsBioNet Analysis
 
@@ -110,13 +124,15 @@ This package is distributed under the [Artistic-2.0](https://opensource.org/lice
 ## Visualize Networks
 
 The function `visualizeNetworks` then takes the output of 
-`getSubnetworkFromIndra` and visualizes the subnetwork.
+`getSubnetworkFromIndra` and visualizes the subnetwork. The function requires
+Cytoscape desktop to be open for the visualization to work.
 
 ```{r}
 visualizeNetworks(subnetwork$nodes, subnetwork$edges)
 ```
-
-
+In the network diagram displayed in Cytoscape, you should see two arrows
+connecting two nodes, P16050 and P84243.  These arrows represent the 
+interactions between these two proteins, notably activation and phosphorylation.
 
 # Session info
 
